tests/bad/global_vars_infer.ae
/// fail: Global variable must have a type

const X: i32 = 1
let Y = X + 1

def main() {
    println(`{Y}`)
}